# goal-tracker

./: .gitignore  LICENSE  LOG.md  README.md  compose.dev.yaml  compose.test.yaml  compose.yaml  makefile
backend/: .coverage  .dockerignore  .gitignore  Dockerfile  Dockerfile.test  __init__.py  alembic.ini  api.py  database.py  exceptions.py  main.py  pyproject.toml  quotes.txt  requirements-developer.in  requirements-developer.txt  requirements.in  requirements.txt  util.py  wait_for_postgres.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_04_10_1111-07ed0f5eea5f_add_required_activities_per_period_to_.py  2025_04_10_1211-f5205fea0dcb_fix_column_name.py  2025_04_14_1152-371d9b415c77_add_count_to_activity.py  2025_04_15_1652-3cced2940039_added_encouragement_table.py  2025_04_16_1221-c4cdfe5dd170_split_activity_completion_field.py  2025_04_18_0924-4983effd1751_migrating_account_table.py
backend/tests/: conftest.py  gql.py  test_api.py  test_api_activity.py  test_api_encouragement.py  test_api_goal.py  test_api_goal_frequency.py  test_api_user.py  test_api_user_status_daily_goal.py  test_api_user_status_weekly_goal.py  test_api_user_status_yearly_goal.py
frontend/: .gitignore  Dockerfile  Dockerfile.dev.nginx  Dockerfile.dev.vite  Dockerfile.test  codegen.ts  index.html  nginx.conf  nginx.dev.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: ActivityCheckbox.tsx  (+63 more)
k3s/: deployment-backend.yaml  deployment-frontend.yaml  secret-postgresql-production.yaml  service-backend.yaml  service-frontend.yaml
(+2 files in other folders)
